associamos a acao ao evento de submit & vimos alternativas para esse processo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="flex w-full flex-col px-6 my-2 h-[4.25rem]">
           <label for="tax-rate" class="font-bold text-gray-700"
-            >Imposto sobre lucro</label
+            >Impostos sobre lucro</label
           >
           <div class="flex">
             <input
@@ -142,5 +142,6 @@
     <main>
       <p>Resultados</p>
     </main>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
