definida a estética do erro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <label for="starting-amount" class="font-bold text-gray-700"
             >Investimento inicial</label
           >
-          <div class="flex">
+          <div class="flex error">
             <input
               value="R$"
               class="w-1/6 text-center rounded-l-lg"
@@ -32,6 +32,7 @@
               name="starting-amount"
             />
           </div>
+          <p class="text-red-500">Insira um valor numérico e maior que zero</p>
         </div>
         <div class="flex w-full flex-col px-6 my-2 h-[4.25rem]">
           <label for="additional-contribution" class="font-bold text-gray-700"
